rules: no-alert

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,5 +7,7 @@
     "parserOptions": {
         "sourceType": "module"
     },
-    "rules": {}
+    "rules": {
+        "no-alert": "error"
+    }
 }
