rules: no-caller

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
     },
     "rules": {
         "no-alert": "error",
-        "no-array-constructor": "error"
+        "no-array-constructor": "error",
+        "no-caller": "error"
     }
 }
