--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
     "rules": {
         "no-alert": "error",
         "no-array-constructor": "error",
-        "no-caller": "error"
+        "no-caller": "error",
+        "no-eval": "error"
     }
 }
