--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
         "no-alert": "error",
         "no-array-constructor": "error",
         "no-caller": "error",
-        "no-eval": "error"
+        "no-eval": "error",
+        "no-extend-native": "error"
     }
 }
