rules: no-extra-bind

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
         "no-array-constructor": "error",
         "no-caller": "error",
         "no-eval": "error",
-        "no-extend-native": "error"
+        "no-extend-native": "error",
+        "no-extra-bind": "error"
     }
 }
