rules: no-implied-eval

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
         "no-caller": "error",
         "no-eval": "error",
         "no-extend-native": "error",
-        "no-extra-bind": "error"
+        "no-extra-bind": "error",
+        "no-implied-eval": "error"
     }
 }
