rules: no-iterator

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
         "no-eval": "error",
         "no-extend-native": "error",
         "no-extra-bind": "error",
-        "no-implied-eval": "error"
+        "no-implied-eval": "error",
+        "no-iterator": "error"
     }
 }
