rules: no-loop-func

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
         "no-implied-eval": "error",
         "no-iterator": "error",
         "no-label-var": "error",
-        "no-lone-blocks": "error"
+        "no-lone-blocks": "error",
+        "no-loop-func": "error"
     }
 }
