rules: no-multi-spaces

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
         "no-iterator": "error",
         "no-label-var": "error",
         "no-lone-blocks": "error",
-        "no-loop-func": "error"
+        "no-loop-func": "error",
+        "no-multi-spaces": "error"
     }
 }
