--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
         "no-label-var": "error",
         "no-lone-blocks": "error",
         "no-loop-func": "error",
-        "no-multi-spaces": "error"
+        "no-multi-spaces": "error",
+        "no-native-reassign": "error"
     }
 }
