--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
         "no-lone-blocks": "error",
         "no-loop-func": "error",
         "no-multi-spaces": "error",
-        "no-native-reassign": "error"
+        "no-native-reassign": "error",
+        "no-new": "error"
     }
 }
