--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
         "no-loop-func": "error",
         "no-multi-spaces": "error",
         "no-native-reassign": "error",
-        "no-new": "error"
+        "no-new": "error",
+        "no-new-func": "error"
     }
 }
