--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
         "no-multi-spaces": "error",
         "no-native-reassign": "error",
         "no-new": "error",
-        "no-new-func": "error"
+        "no-new-func": "error",
+        "no-new-object": "error"
     }
 }
