--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
         "no-native-reassign": "error",
         "no-new": "error",
         "no-new-func": "error",
-        "no-new-object": "error"
+        "no-new-object": "error",
+        "no-new-wrappers": "error"
     }
 }
