rules: no-octal-escape

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
         "no-new": "error",
         "no-new-func": "error",
         "no-new-object": "error",
-        "no-new-wrappers": "error"
+        "no-new-wrappers": "error",
+        "no-octal-escape": "error"
     }
 }
