rules: no-shadow-restricted-names

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,7 @@
                 "builtinGlobals": true,
                 "hoist": "all"
             }
-        ]
+        ],
+        "no-shadow-restricted-name": "error"
     }
 }
