--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,6 +40,7 @@
         ],
         "no-shadow-restricted-name": "error",
         "no-spaced-func": "error",
-        "no-trailing-spaces": "error"
+        "no-trailing-spaces": "error",
+        "no-undef-init": "error"
     }
 }
