--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,6 +41,7 @@
         "no-shadow-restricted-name": "error",
         "no-spaced-func": "error",
         "no-trailing-spaces": "error",
-        "no-undef-init": "error"
+        "no-undef-init": "error",
+        "no-underscore-dangle": "error"
     }
 }
