--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,6 +42,7 @@
         "no-spaced-func": "error",
         "no-trailing-spaces": "error",
         "no-undef-init": "error",
-        "no-underscore-dangle": "error"
+        "no-underscore-dangle": "error",
+        "no-unused-expressions": "error"
     }
 }
