--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,6 +44,7 @@
         "no-undef-init": "error",
         "no-underscore-dangle": "error",
         "no-unused-expressions": "error",
-        "no-use-before-define": "error"
+        "no-use-before-define": "error",
+        "no-with": "error"
     }
 }
