rules: comma-spacing

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
     },
     "rules": {
         "camelcase": "error",
+        "comma-spacing": "error",
         "no-alert": "error",
         "no-array-constructor": "error",
         "no-caller": "error",
