--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
         "curly": "error",
         "dot-notation": "error",
         "eol-last": "error",
+        "eqeqeq": "error",
         "no-alert": "error",
         "no-array-constructor": "error",
         "no-caller": "error",
